--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.7.1",
     "framer-motion": "^6.3.3",
     "jquery": "^3.6.0",
     "react": "^18.0.0",
     "react-big-calendar": "^0.40.0",
+    "react-chartjs-2": "^4.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
@@ -29,8 +31,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
