--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "chakra-react-select": "^3.3.1",
     "chart.js": "^3.7.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6.3.3",
     "jquery": "^3.6.0",
     "react": "^18.0.0",
@@ -25,6 +27,7 @@
     "react-popper": "^2.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.1",
     "reactstrap": "^9.0.2",
     "saas": "^1.0.0",
     "web-vitals": "^2.1.4"
