--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-select": "^5.3.1",
     "reactstrap": "^9.0.2",
     "saas": "^1.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
