--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chakra-react-select": "^3.3.1",
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
+    "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^6.3.3",
     "jquery": "^3.6.0",
     "react": "^18.0.0",
