--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^6.3.3",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-big-calendar": "^0.40.0",
     "react-chartjs-2": "^4.1.0",
