--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@devexpress/dx-react-scheduler": "^3.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@popperjs/core": "^2.11.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
@@ -63,6 +65,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@types/react-big-calendar": "^0.38.0",
     "gh-pages": "^3.2.3",
     "sass": "^1.51.0"
   }
