--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/form-control": "^2.0.0",
+    "@chakra-ui/layout": "^2.0.0",
+    "@chakra-ui/menu": "^2.0.0",
     "@chakra-ui/react": "^2.0.0",
+    "@chakra-ui/spinner": "^2.0.0",
+    "@chakra-ui/system": "^2.0.2",
     "@devexpress/dx-react-core": "^3.0.2",
     "@devexpress/dx-react-scheduler": "^3.0.2",
     "@emotion/react": "^11.9.0",
@@ -19,7 +24,7 @@
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
