--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chakra-react-select": "^3.3.1",
     "chart.js": "^3.7.1",
+    "flatpickr": "^4.6.13",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^4.1.17",
@@ -32,6 +33,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
+    "react-flatpickr": "^3.10.12",
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
     "react-router-dom": "^6.3.0",
