--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /build
 
 # global
-/src/environment/global.js
+#/src/environment/global.js
 
 # misc
 .DS_Store
@@ -24,3 +24,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vercel
