--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/form-control": "^2.0.0",
+    "@chakra-ui/icons": "^2.0.1",
     "@chakra-ui/layout": "^2.0.0",
     "@chakra-ui/menu": "^2.0.0",
     "@chakra-ui/react": "^2.0.0",
@@ -27,7 +28,7 @@
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "react-big-calendar": "^0.40.0",
     "react-chartjs-2": "^4.1.0",
     "react-color": "^2.19.3",
@@ -40,6 +41,7 @@
     "react-select": "^5.3.1",
     "reactstrap": "^9.0.2",
     "saas": "^1.0.0",
+    "scripts": "^0.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
