--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.3.1",
     "reactstrap": "^9.0.2",
+    "recharts": "^2.1.10",
     "saas": "^1.0.0",
     "scripts": "^0.1.0",
     "web-vitals": "^2.1.4",
