--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.1",
+    "react-typing-effect": "^2.0.5",
     "reactstrap": "^9.0.2",
     "recharts": "^2.1.10",
     "saas": "^1.0.0",
