--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-big-calendar": "^0.40.0",
+    "react-chakra-pagination": "^1.0.1",
     "react-chartjs-2": "^4.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
@@ -39,6 +40,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.1",
+    "react-table": "^7.8.0",
     "react-typing-effect": "^2.0.5",
     "reactstrap": "^9.0.2",
     "recharts": "^2.1.10",
