--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_SERVER_PROD = https://plabo.pythonanywhere.com/api/
+REACT_APP_API_URL = https://plabo.pythonanywhere.com/api/
 REACT_APP_API_SERVER_DEV = http://127.0.0.1:8000/api/
