--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL_PRO = https://plabo.pythonanywhere.com/api/
-REACT_APP_API_URL= http://127.0.0.1:8000
+REACT_APP_API_URL= http://127.0.0.1:8000/api/
