latest changes and minified

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "axios": "^1.2.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.10.3",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
+    "npm": "^9.3.1",
+    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.1",
+    "react-big-calendar": "^1.5.2",
     "react-chakra-pagination": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
