--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-typing-effect": "^2.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
