--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-typing-effect": "^2.0.5",
+    "recharts": "^2.4.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
