--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "chakra-react-select": "^4.5.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "install": "^0.13.0",
