--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "npm": "^9.3.1",
     "or": "^0.2.0",
