--- a/package.json
+++ b/package.json
@@ -1,51 +1,37 @@
 {
-  "name": "anothertool",
+  "name": "anothertool_front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/form-control": "^2.0.0",
-    "@chakra-ui/icons": "^2.0.1",
-    "@chakra-ui/layout": "^2.0.0",
-    "@chakra-ui/menu": "^2.0.0",
-    "@chakra-ui/react": "^2.0.0",
-    "@chakra-ui/spinner": "^2.0.0",
-    "@chakra-ui/system": "^2.0.2",
-    "@devexpress/dx-react-core": "^3.0.2",
-    "@devexpress/dx-react-scheduler": "^3.0.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@popperjs/core": "^2.11.5",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
+    "@chakra-ui/react": "^2.4.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@tanstack/react-query": "^4.22.0",
+    "@tanstack/react-table": "^8.7.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "chakra-react-select": "^3.3.1",
-    "chart.js": "^3.7.1",
-    "flatpickr": "^4.6.13",
+    "axios": "^1.2.2",
+    "chakra-react-select": "^4.5.0",
     "formik": "^2.2.9",
-    "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^4.1.17",
-    "jquery": "^3.6.0",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
-    "react": "^18.1.0",
-    "react-big-calendar": "^0.40.0",
+    "moment": "^2.29.4",
+    "npm": "^9.3.1",
+    "or": "^0.2.0",
+    "react": "^18.2.0",
+    "react-auth-kit": "^2.7.1",
+    "react-big-calendar": "^1.5.2",
     "react-chakra-pagination": "^1.0.1",
-    "react-chartjs-2": "^4.1.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.0.0",
-    "react-flatpickr": "^3.10.12",
-    "react-icons": "^4.3.1",
-    "react-popper": "^2.2.5",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "react-select": "^5.3.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.2",
+    "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-typing-effect": "^2.0.5",
-    "reactstrap": "^9.0.2",
-    "recharts": "^2.1.10",
-    "saas": "^1.0.0",
-    "scripts": "^0.1.0",
+    "recharts": "^2.4.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -56,10 +42,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -72,11 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^6.2.1",
-    "@types/react-big-calendar": "^0.38.0",
-    "gh-pages": "^3.2.3",
-    "sass": "^1.51.0"
   }
 }
